// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for variant: primary, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, isDisabledOrLoading: true and theme: dark 1`] = `
":host {
  display:inline-flex;
  vertical-align:top;
  outline:0 !important;
}
.root {
  display:flex;
  width:100%;
  min-width:3rem;
  min-height:3rem;
  position:relative;
  margin:0;
  padding:0;
  box-sizing:border-box;
  outline:1px solid transparent;
  appearance:none;
  cursor:not-allowed;
  text-decoration:none;
  text-align:left;
  border:1px solid currentColor;
  background-color:currentColor;
  color:#7c7f81;
  transition:background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
  outline-offset:2px;
}
.root::-moz-focus-inner {
  border:0;
}
.root:focus {
  outline-color:currentColor;
}
.root:focus:not(:focus-visible) {
  outline-color:transparent;
}
.icon {
  position:absolute;
  width:1.5rem;
  height:1.5rem;
  color:rgba(255,255,255,0.55);
  pointer-events:none;
  left:50%;
  top:50%;
  transform:translate3d(-50%, -50%, 0);
}
.label {
  display:block;
  box-sizing:border-box;
  color:rgba(255,255,255,0.55);
  width:1px;
  height:1px;
  margin:0 0 0 -1px;
  overflow:hidden;
  text-indent:-1px;
}
@media(min-width:480px) {
  .root {
    padding:0.6875rem 0.9375rem 0.6875rem 2.4375rem;
  }
  .icon {
    left:0.6875rem;
    top:0.6875rem;
    transform:translate3d(0,0,0);
  }
  .label {
    width:100%;
    height:auto;
    margin:0;
    overflow:visible;
    text-indent:0;
  }
}

@media(min-width:760px) {
  .root {
    padding:0;
  }
  .icon {
    left:50%;
    top:50%;
    transform:translate3d(-50%, -50%, 0);
  }
  .label {
    width:1px;
    height:1px;
    margin:0 0 0 -1px;
    overflow:hidden;
    text-indent:-1px;
  }
}

@media(min-width:1000px) {
  .root {
    padding:0.6875rem 0.9375rem 0.6875rem 2.4375rem;
  }
  .icon {
    left:0.6875rem;
    top:0.6875rem;
    transform:translate3d(0,0,0);
  }
  .label {
    width:100%;
    height:auto;
    margin:0;
    overflow:visible;
    text-indent:0;
  }
}

@media(min-width:1300px) {
  .root {
    padding:0;
  }
  .icon {
    left:50%;
    top:50%;
    transform:translate3d(-50%, -50%, 0);
  }
  .label {
    width:1px;
    height:1px;
    margin:0 0 0 -1px;
    overflow:hidden;
    text-indent:-1px;
  }
}

@media(min-width:1760px) {
  .root {
    padding:0.6875rem 0.9375rem 0.6875rem 2.4375rem;
  }
  .icon {
    left:0.6875rem;
    top:0.6875rem;
    transform:translate3d(0,0,0);
  }
  .label {
    width:100%;
    height:auto;
    margin:0;
    overflow:visible;
    text-indent:0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for variant: primary, hideLabel: false, isDisabledOrLoading: false and theme: dark 1`] = `
":host {
  display:inline-flex;
  vertical-align:top;
  outline:0 !important;
}
.root {
  display:flex;
  width:100%;
  min-width:3rem;
  min-height:3rem;
  position:relative;
  margin:0;
  padding:0.6875rem 0.9375rem 0.6875rem 2.4375rem;
  box-sizing:border-box;
  outline:1px solid transparent;
  appearance:none;
  cursor:pointer;
  text-decoration:none;
  text-align:left;
  border:1px solid currentColor;
  background-color:currentColor;
  color:#d5001c;
  transition:background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
  outline-offset:2px;
}
.root::-moz-focus-inner {
  border:0;
}
.root:focus {
  outline-color:currentColor;
}
.root:focus:not(:focus-visible) {
  outline-color:transparent;
}
.root:hover, .root:active {
  color:#c4001a;
}
.icon {
  position:absolute;
  width:1.5rem;
  height:1.5rem;
  color:#fff;
  pointer-events:none;
  left:0.6875rem;
  top:0.6875rem;
  transform:translate3d(0,0,0);
}
.label {
  display:block;
  box-sizing:border-box;
  color:#fff;
  width:100%;
  height:auto;
  margin:0;
  overflow:visible;
  text-indent:0;
}"
`;

exports[`getComponentCss() should return correct css for variant: primary, hideLabel: false, isDisabledOrLoading: false and theme: light 1`] = `
":host {
  display:inline-flex;
  vertical-align:top;
  outline:0 !important;
}
.root {
  display:flex;
  width:100%;
  min-width:3rem;
  min-height:3rem;
  position:relative;
  margin:0;
  padding:0.6875rem 0.9375rem 0.6875rem 2.4375rem;
  box-sizing:border-box;
  outline:1px solid transparent;
  appearance:none;
  cursor:pointer;
  text-decoration:none;
  text-align:left;
  border:1px solid currentColor;
  background-color:currentColor;
  color:#d5001c;
  transition:background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
  outline-offset:2px;
}
.root::-moz-focus-inner {
  border:0;
}
.root:focus {
  outline-color:currentColor;
}
.root:focus:not(:focus-visible) {
  outline-color:transparent;
}
.root:hover, .root:active {
  color:#980014;
}
.icon {
  position:absolute;
  width:1.5rem;
  height:1.5rem;
  color:#fff;
  pointer-events:none;
  left:0.6875rem;
  top:0.6875rem;
  transform:translate3d(0,0,0);
}
.label {
  display:block;
  box-sizing:border-box;
  color:#fff;
  width:100%;
  height:auto;
  margin:0;
  overflow:visible;
  text-indent:0;
}"
`;

exports[`getComponentCss() should return correct css for variant: primary, hideLabel: false, isDisabledOrLoading: true and theme: light 1`] = `
":host {
  display:inline-flex;
  vertical-align:top;
  outline:0 !important;
}
.root {
  display:flex;
  width:100%;
  min-width:3rem;
  min-height:3rem;
  position:relative;
  margin:0;
  padding:0.6875rem 0.9375rem 0.6875rem 2.4375rem;
  box-sizing:border-box;
  outline:1px solid transparent;
  appearance:none;
  cursor:not-allowed;
  text-decoration:none;
  text-align:left;
  border:1px solid currentColor;
  background-color:currentColor;
  color:#96989a;
  transition:background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
  outline-offset:2px;
}
.root::-moz-focus-inner {
  border:0;
}
.root:focus {
  outline-color:currentColor;
}
.root:focus:not(:focus-visible) {
  outline-color:transparent;
}
.icon {
  position:absolute;
  width:1.5rem;
  height:1.5rem;
  color:rgba(255,255,255,0.55);
  pointer-events:none;
  left:0.6875rem;
  top:0.6875rem;
  transform:translate3d(0,0,0);
}
.label {
  display:block;
  box-sizing:border-box;
  color:rgba(255,255,255,0.55);
  width:100%;
  height:auto;
  margin:0;
  overflow:visible;
  text-indent:0;
}"
`;

exports[`getComponentCss() should return correct css for variant: secondary, hideLabel: false, isDisabledOrLoading: false and theme: dark 1`] = `
":host {
  display:inline-flex;
  vertical-align:top;
  outline:0 !important;
}
.root {
  display:flex;
  width:100%;
  min-width:3rem;
  min-height:3rem;
  position:relative;
  margin:0;
  padding:0.6875rem 0.9375rem 0.6875rem 2.4375rem;
  box-sizing:border-box;
  outline:1px solid transparent;
  appearance:none;
  cursor:pointer;
  text-decoration:none;
  text-align:left;
  border:1px solid currentColor;
  background-color:currentColor;
  color:#fff;
  transition:background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
  outline-offset:2px;
}
.root::-moz-focus-inner {
  border:0;
}
.root:focus {
  outline-color:currentColor;
}
.root:focus:not(:focus-visible) {
  outline-color:transparent;
}
.root:hover, .root:active {
  color:#e0e0e0;
}
.icon {
  position:absolute;
  width:1.5rem;
  height:1.5rem;
  color:#000;
  pointer-events:none;
  left:0.6875rem;
  top:0.6875rem;
  transform:translate3d(0,0,0);
}
.label {
  display:block;
  box-sizing:border-box;
  color:#000;
  width:100%;
  height:auto;
  margin:0;
  overflow:visible;
  text-indent:0;
}"
`;

exports[`getComponentCss() should return correct css for variant: secondary, hideLabel: false, isDisabledOrLoading: false and theme: light 1`] = `
":host {
  display:inline-flex;
  vertical-align:top;
  outline:0 !important;
}
.root {
  display:flex;
  width:100%;
  min-width:3rem;
  min-height:3rem;
  position:relative;
  margin:0;
  padding:0.6875rem 0.9375rem 0.6875rem 2.4375rem;
  box-sizing:border-box;
  outline:1px solid transparent;
  appearance:none;
  cursor:pointer;
  text-decoration:none;
  text-align:left;
  border:1px solid currentColor;
  background-color:currentColor;
  color:#323639;
  transition:background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
  outline-offset:2px;
}
.root::-moz-focus-inner {
  border:0;
}
.root:focus {
  outline-color:currentColor;
}
.root:focus:not(:focus-visible) {
  outline-color:transparent;
}
.root:hover, .root:active {
  color:#151718;
}
.icon {
  position:absolute;
  width:1.5rem;
  height:1.5rem;
  color:#fff;
  pointer-events:none;
  left:0.6875rem;
  top:0.6875rem;
  transform:translate3d(0,0,0);
}
.label {
  display:block;
  box-sizing:border-box;
  color:#fff;
  width:100%;
  height:auto;
  margin:0;
  overflow:visible;
  text-indent:0;
}"
`;

exports[`getComponentCss() should return correct css for variant: tertiary, hideLabel: false, isDisabledOrLoading: false and theme: dark 1`] = `
":host {
  display:inline-flex;
  vertical-align:top;
  outline:0 !important;
}
.root {
  display:flex;
  width:100%;
  min-width:3rem;
  min-height:3rem;
  position:relative;
  margin:0;
  padding:0.6875rem 0.9375rem 0.6875rem 2.4375rem;
  box-sizing:border-box;
  outline:1px solid transparent;
  appearance:none;
  cursor:pointer;
  text-decoration:none;
  text-align:left;
  border:1px solid currentColor;
  background-color:transparent;
  color:#fff;
  transition:background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
  outline-offset:2px;
}
.root::-moz-focus-inner {
  border:0;
}
.root:focus {
  outline-color:currentColor;
}
.root:focus:not(:focus-visible) {
  outline-color:transparent;
}
.root:hover, .root:active {
  color:#fff;
  background-color:currentColor;
}
.root:hover .label, .root:hover .icon, .root:active .label, .root:active .icon {
  color:#000;
}
.icon {
  position:absolute;
  width:1.5rem;
  height:1.5rem;
  color:#fff;
  pointer-events:none;
  left:0.6875rem;
  top:0.6875rem;
  transform:translate3d(0,0,0);
}
.label {
  display:block;
  box-sizing:border-box;
  color:#fff;
  width:100%;
  height:auto;
  margin:0;
  overflow:visible;
  text-indent:0;
}"
`;

exports[`getComponentCss() should return correct css for variant: tertiary, hideLabel: false, isDisabledOrLoading: false and theme: light 1`] = `
":host {
  display:inline-flex;
  vertical-align:top;
  outline:0 !important;
}
.root {
  display:flex;
  width:100%;
  min-width:3rem;
  min-height:3rem;
  position:relative;
  margin:0;
  padding:0.6875rem 0.9375rem 0.6875rem 2.4375rem;
  box-sizing:border-box;
  outline:1px solid transparent;
  appearance:none;
  cursor:pointer;
  text-decoration:none;
  text-align:left;
  border:1px solid currentColor;
  background-color:transparent;
  color:#323639;
  transition:background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
  outline-offset:2px;
}
.root::-moz-focus-inner {
  border:0;
}
.root:focus {
  outline-color:currentColor;
}
.root:focus:not(:focus-visible) {
  outline-color:transparent;
}
.root:hover, .root:active {
  color:#151718;
  background-color:currentColor;
}
.root:hover .label, .root:hover .icon, .root:active .label, .root:active .icon {
  color:#fff;
}
.icon {
  position:absolute;
  width:1.5rem;
  height:1.5rem;
  color:#000;
  pointer-events:none;
  left:0.6875rem;
  top:0.6875rem;
  transform:translate3d(0,0,0);
}
.label {
  display:block;
  box-sizing:border-box;
  color:#000;
  width:100%;
  height:auto;
  margin:0;
  overflow:visible;
  text-indent:0;
}"
`;
